--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "@types/node": "^22.10.5",
     "tsx": "^4.21.0",
     "typescript": "^5.7.2"
-  }
+  },
+  "packageManager": "yarn@4.12.0"
 }
